@@ -1,8 +1,7 @@
 package com.example.xuefeng.stream;
 
-import com.sun.tools.javac.util.List;
-
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.IntStream;
 import java.util.stream.LongStream;
 import java.util.stream.Stream;
@@ -14,13 +13,13 @@ public class Demo1 {
         Stream<String> stream = Arrays.stream(new String[]{"1", "2", "3"});
         stream.forEach(System.out::println);
 
-        List<String> of = List.of("hello", "world");
+        List<String> of = Arrays.asList("hello", "world");
         of.stream().forEach(System.out::println);
 
 
         IntStream is = Arrays.stream(new int[]{1, 2, 3});
         // 将Stream<String>转换为LongStream:
-        LongStream ls = List.of("1", "2", "3").stream().mapToLong(Long::parseLong);
+        LongStream ls =  Arrays.asList("1", "2", "3").stream().mapToLong(Long::parseLong);
         ls.forEach(System.out::println);
 
 
